# design_patterns

./: .gitignore  CMakeLists.txt  README.md  tmp.txt
custom/: CMakeLists.txt
custom/behavioral_patterns/chain_of_responsibility/: Base_responder.cpp  Base_responder.h  CMakeLists.txt  Concrete_responders.cpp  Concrete_responders.h  Handle.cpp  Handle.h  main.cpp
custom/behavioral_patterns/command/: CMakeLists.txt  Command.cpp  Command.h  Concrete_command.h  Invoker.cpp  Invoker.h  Reciever.cpp  Reciever.h  main.cpp
custom/behavioral_patterns/interpreter/: Binary_expression.cpp  Binary_expression.h  CMakeLists.txt  Call_expression.cpp  Call_expression.h  Context.cpp  Context.h  Expression.cpp  Expression.h  Function_definition.cpp  Function_definition.h  Function_prototype.cpp  Function_prototype.h  Interpret.cpp  Interpret.h  Interpreter.cpp  Interpreter.h  Number_expression.cpp  Number_expression.h  Token_stream.cpp  Token_stream.h  Variable_expression.cpp  Variable_expression.h  main.cpp  token.h  utility.h
custom/behavioral_patterns/iterator/: Aggregate.cpp  Aggregate.h  CMakeLists.txt  Container.h  Iterator.cpp  Iterator.h  main.cpp
custom/behavioral_patterns/mediator/: CMakeLists.txt  Colleague.cpp  Colleague.h  Mediator.cpp  Mediator.h  main.cpp
custom/behavioral_patterns/memento/: CMakeLists.txt  Memento.cpp  Memento.h  main.cpp
custom/behavioral_patterns/observer/: CMakeLists.txt  Observer.cpp  Observer.h  Subject.cpp  Subject.h  main.cpp
custom/behavioral_patterns/state/: CMakeLists.txt  Context.cpp  Context.h  State.cpp  State.h  main.cpp
custom/behavioral_patterns/strategy/: CMakeLists.txt  Context.cpp  Context.h  Strategy.cpp  Strategy.h  main.cpp
custom/behavioral_patterns/template/: CMakeLists.txt  Template.cpp  Template.h  main.cpp
custom/behavioral_patterns/visitor/: CMakeLists.txt  Element.cpp  Element.h  Visitor.cpp  Visitor.h  main.cpp
custom/creational_patterns/abstract_factory/: Abstract_factory.cpp  Abstract_factory.h  CMakeLists.txt  Product.cpp  Product.h  main.cpp
custom/creational_patterns/builder/: Builder.cpp  Builder.h  CMakeLists.txt  Director.cpp  Director.h  Product.cpp  Product.h  main.cpp
custom/creational_patterns/factory/: CMakeLists.txt  Factory.cpp  Factory.h  Product.cpp  Product.h  main.cpp
custom/creational_patterns/prototype/: CMakeLists.txt  Prototype.cpp  Prototype.h  main.cpp
custom/creational_patterns/singleton/: CMakeLists.txt  Singleton.cpp  Singleton.h  main.cpp
custom/structural_patterns/adapter/: CMakeLists.txt
custom/structural_patterns/bridge/: Abstraction.cpp  Abstraction.h  Abstraction_impl.cpp  Abstraction_impl.h  CMakeLists.txt  main.cpp
custom/structural_patterns/composite/: CMakeLists.txt  Component.cpp  Component.h  Composite.cpp  Composite.h  Leaf.cpp  Leaf.h  main.cpp
custom/structural_patterns/decorator/: CMakeLists.txt  Decorator.cpp  Decorator.h  main.cpp
custom/structural_patterns/facade/: CMakeLists.txt  Facade.cpp  Facade.h  main.cpp
custom/structural_patterns/flyweight/: CMakeLists.txt  Flyweight.cpp  Flyweight.h  Flyweight_factory.cpp  Flyweight_factory.h  main.cpp
custom/structural_patterns/proxy/: CMakeLists.txt  Proxy.cpp  Proxy.h  main.cpp
gang_of_four/behavioral_patterns/chain_of_responsibility/: Application.cpp  Application.h  Button.cpp  Button.h  CMakeLists.txt  Dialog.cpp  Dialog.h  Extended_handler.cpp  Extended_handler.h  Handler.cpp  Handler.h  Help_handler.cpp  Help_handler.h  Help_request.h  Print_request.h  Request.h  Widget.cpp  Widget.h  chain_of_responsibility_main.cpp
gang_of_four/behavioral_patterns/command/: Application.cpp  Application.h  CMakeLists.txt  Command.cpp  Command.h  Document.cpp  Document.h  Macro_command.cpp  Macro_command.h  My_class.cpp  My_class.h  Open_command.cpp  Open_command.h  Paste_command.cpp  Paste_command.h  Simple_command.h  command_main.cpp
gang_of_four/behavioral_patterns/interpreter/: And_exp.cpp  And_exp.h  Boolean_exp.cpp  Boolean_exp.h  CMakeLists.txt  Constant.cpp  Constant.h  Context.cpp  Context.h  Not_exp.cpp  Not_exp.h  Or_exp.cpp  Or_exp.h  Variable_exp.cpp  Variable_exp.h  interpreter_main.cpp
gang_of_four/behavioral_patterns/iterator/: AbstractList.h  CMakeLists.txt  Employee.cpp  Employee.h  FilteringListTraverser.cpp  FilteringListTraverser.h  Iterator.h  IteratorOutOfBounds.h  IteratorPtr.h  ListIterator.cpp  ListIterator.h  ListTraverser.cpp  ListTraverser.h  PrintNEmployees.h  ReverseListIterator.cpp  ReverseListIterator.h  SkipList.cpp  SkipList.h  SkipListIterator.cpp  SkipListIterator.h  external_iterator.cpp  iterator_main.cpp
gang_of_four/behavioral_patterns/mediator/: Button.cpp  Button.h  CMakeLists.txt  Dialog_director.cpp  Dialog_director.h  Entry_field.cpp  Entry_field.h  Font_dialog_director.cpp  Font_dialog_director.h  List_box.cpp  List_box.h  Mouse_event.cpp  Mouse_event.h  Widget.cpp  Widget.h  mediator_main.cpp
gang_of_four/behavioral_patterns/memento/: CMakeLists.txt  Constraint_solver.cpp  Constraint_solver.h  Constraint_solver_memento.cpp  Constraint_solver_memento.h  Graphic.cpp  Graphic.h  Move_command.cpp  Move_command.h
gang_of_four/behavioral_patterns/observer/: AnalogClock.h  Analog_clock.h  CMakeLists.txt  ClockTimer.h  Clock_timer.cpp  Clock_timer.h  DigitalClock.cpp  DigitalClock.h  Digital_clock.cpp  Digital_clock.h  Observer.h  Subject.cpp  Subject.h  (+1 more)
gang_of_four/creational_patterns/: BombedMazeFactory.h  BombedMazeGame.cpp  BombedWall.h  Bombed_maze_factory.cpp  Bombed_maze_factory.h  Bombed_maze_game.cpp  Bombed_maze_game.h  Bombed_wall.cpp  Bombed_wall.h  CMakeLists.txt  CastSpell.h  Cast_spell.h  Door.cpp  Door.h  DoorNeedingSpell.h  Door_needing_spell.cpp  Door_needing_spell.h  EnchantedMazeFactory.cpp  EnchantedMazeFactory.h  EnchantedRoom.h  Enchanted_maze_factory.cpp  Enchanted_maze_factory.h  Enchanted_maze_game.h  Enchanted_room.cpp  Enchanted_room.h  MapSite.h  Map_site.h  Maze.cpp  Maze.h  MazeFactory.cpp  MazeFactory.h  MazeGame.cpp  MazeGame.h  MazeParts.h  Maze_factory.cpp  Maze_factory.h  Maze_game.cpp  Maze_game.h  Maze_parts.h  Room.cpp  (+7 more)
(+390 files in other folders)
